home page content added

--- a/contact.html
+++ b/contact.html
@@ -197,7 +197,7 @@
 				<div class="col-md-12 col-lg-6">
 					<img src="assets/img/logo.svg" class="footer-logo">
 					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					<div class="copyright d-none d-sm-block">
+					<div class="copyright d-none d-lg-block">
 						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
@@ -215,7 +215,7 @@
 						<div class="socialmedia">
 							<img src="assets/img/icon/linkedin.svg"> Find us on LinkedIn
 						</div>
-						<div class="copyright d-block d-sm-none">
+						<div class="copyright d-block d-lg-none">
 							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
