--- a/index.html
+++ b/index.html
@@ -20,32 +20,42 @@
 	<!-- ======= Header ======= -->
 	<header id="header" class="d-block align-items-center  header-transparent ">
 		<div class="container-fluid d-flex align-items-center justify-content-between">
-			<div class="logo d-none d-sm-block">
+			<div class="logo d-none d-md-block">
 				<h1><a href="index"><img src="assets/img/logo.svg"></a></h1>
 			</div>
-			<div class="logo d-block d-sm-none">
+			<div class="logo d-block d-md-none">
 				<h1><a href="index"><img src="assets/img/mobile-logo.svg"></a></h1>
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
+					<li><a class="nav-link" href="index">HOME</a></li>
 					<li><a class="nav-link" href="about">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="goals/accelerate-revenues.html">Optimize Operations</a></li>
-							<li><a href="goals/accelerate-revenues.html">Accelerate
-									Revenues</a></li>
-							<li><a href="goals/accelerate-revenues.html">Harness the power of data and analytics</a>
+							<li><a href="goals/accelerate-revenues.html">Transform your enterprise
+								</a></li>
+							<li><a href="goals/accelerate-revenues.html">Improve digital experiences</a></li>
+							<li><a href="goals/accelerate-revenues.html">Accelerate sales
+								</a>
 							</li>
-							<li><a href="goals/accelerate-revenues.html">Modernize core
-									technologies</a></li>
-							<li><a href="goals/accelerate-revenues.html">Create
-									stunning digital
-									experiences</a></li>
-							<li><a href="goals/accelerate-revenues.html">Empower
-									customer success</a></li>
+							<li><a href="goals/accelerate-revenues.html">Optimize operations</a></li>
+							<li><a href="goals/accelerate-revenues.html">Build better products</a></li>
+							<li><a href="goals/accelerate-revenues.html">Build data intelligence</a></li>
 						</ul>
 					</li>
-					<li><a class="nav-link" href="#">Services</a></li>
+					<li class="dropdown">
+						<a class="nav-link" href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
+						<ul>
+							<li><a href="services/digital-transformation">Digital Transformation
+								</a></li>
+							<li><a href="services/digital-transformation">Product Development</a></li>
+							<li><a href="services/digital-transformation">Experience design</a>
+							</li>
+							<li><a href="services/digital-transformation">Engineering Pods</a></li>
+							<li><a href="services/digital-transformation">CX Audits</a></li>
+							<li><a href="services/digital-transformation">Technical Audits</a></li>
+						</ul>
+					</li>
 					<li><a class="nav-link" href="career">CAREERS</a></li>
 					<li><a class="nav-link contactus" href="contact">Contact</a></li>
 				</ul>
@@ -56,15 +66,41 @@
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column justify-content-end align-items-center p-0">
-		<div id="heroCarousel" class="carousel  w-100">
-			<div class="imageoverlay"></div>
-			<div class="carousel-item  active">
+		<div id="heroCarousel" class="carousel slide w-100" data-bs-ride="carousel" data-bs-interval="7000">
+			<div class="carousel-item slide-1  active">
 				<div class="carousel-container container">
-					<p class="subtext">kai·zen<span>/ˈkīzən/</span></p>
-					<h1>Continuous<br> Improvement</h1>
-					<p class="">Leading business transformation through High-Impact
-						digital solutions.
+					<h1>Transforming Mid-Market Enterprises
+					</h1>
+					<p>We are a digital transformation company that enables you to provide best in class digital experiences to
+						your customers,
+						consumers, employees, and other prominent stakeholders.
+
 					</p>
+				</div>
+			</div>
+			<div class="carousel-item slide-2">
+				<div class="carousel-container container">
+					<h1>Accelerating your path to digitally enabled success</h1>
+					<p>Enabling High Impact data driven initiatives that improve market dominance and financial performance.
+					</p>
+				</div>
+			</div>
+			<div class="carousel-item slide-3">
+				<div class="carousel-container container">
+					<h1>Kaizen - Continuous Improvement
+					</h1>
+					<p class="">Torinit is an extended continuous improvement partner that enables you to maintain industry
+						leadership. Creating a
+						Kaizen culture within enterprises is the most proven framework to stay on top of your market.
+
+					</p>
+				</div>
+			</div>
+			<div class="container">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"></button>
+					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
+					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
 				</div>
 			</div>
 		</div>
@@ -79,13 +115,13 @@
 							<h2>What we do.</h2>
 						</div>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,
+							We’re digital management consultants, product cartographers, experience designers, and software engineers.
+							We believe
+							that digital transformation unlocks tremendous opportunities for growth.
+						</p>
+						<p>We assist enterprises plan and execute digital strategies that help you deliver seamless experiences,
+							gain a competitive
+							edge, and future-proof your business.
 						</p>
 					</div>
 				</div>
@@ -98,19 +134,24 @@
 				<div class="row">
 					<!--service-1-->
 					<div class="bluebox">
-						<div class="bluebox d-block d-sm-none">
+						<div class="bluebox d-block d-md-none">
 							<div class="imagecontent">
 								<img src="assets/img/services/digital--tranformation.png">
 							</div>
 						</div>
 						<div class="content">
 							<h3>Digital Transformation</h3>
-							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+							<p>Digital First Organizations have experienced tremendous growth in the last decade. We have worked
+								relentlessly to create
+								a proven framework that helps transform business processes from initiation to execution with the help of
+								state of the
+								art digital technologies.
+							</p>
 							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
-					<div class="bluebox d-none d-sm-block">
+					<div class="bluebox d-none d-md-block">
 						<div class="imagecontent">
 							<img src="assets/img/services/digital--tranformation.png">
 						</div>
@@ -126,7 +167,12 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+							<p>Digital products, internal or consumer facing, have become a prominent source of information
+								distribution today.
+								Enabling customer success, accelerating revenues, controlling costs are all possible through appropriate
+								digital product
+								strategy, development and distribution.
+							</p>
 							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
@@ -134,19 +180,24 @@
 					<!--end-->
 					<!--service-3-->
 					<div class="bluebox">
-						<div class="bluebox d-block d-sm-none">
+						<div class="bluebox d-block d-md-none">
 							<div class="imagecontent">
 								<img src="assets/img/services/experience-design.png">
 							</div>
 						</div>
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+							<p>Creating or improving meaningful experiential journeys for your customers, consumers, employees has a
+								direct correlation
+								with the health of your enterprise both financially and qualitatively. Invest in seamless experiences to
+								realize the
+								true potential of their value chain.
+							</p>
 							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
-					<div class="bluebox d-none d-sm-block">
+					<div class="bluebox d-none d-md-block">
 						<div class="imagecontent">
 							<img src="assets/img/services/experience-design.png">
 						</div>
@@ -161,26 +212,34 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Engineering Pods</h3>
-							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+							<p>Harness the power of global teams to build velocity, agility, efficiency, and round the clock support.
+								Our engineering
+								pods act as a dedicated extended engineering team to your internal development efforts.
+							</p>
 							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
 					<!--end-->
 					<div class="bluebox">
-						<div class="bluebox d-block d-sm-none">
+						<div class="bluebox d-block d-md-none">
 							<div class="imagecontent">
 								<img src="assets/img/services/ux-audit.png">
 							</div>
 						</div>
 						<div class="content">
-							<h3>UX Audits</h3>
-							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+							<h3>CX Audits</h3>
+							<p>Troubleshoot issues along the user journey to minimize drop-offs and increase conversion. To win and
+								retain market
+								share, enterprises must continuously assess the health of their CX infrastructure. CX audits assess the
+								quality of
+								existing experiences with surgical precision.
+							</p>
 							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
-					<div class="bluebox d-none d-sm-block">
+					<div class="bluebox d-none d-md-block">
 						<div class="imagecontent">
 							<img src="assets/img/services/ux-audit.png">
 						</div>
@@ -194,7 +253,12 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Technical Audits</h3>
-							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+							<p>Torinit assists you in understanding your tech debt, and uncovering the gap that exists between
+								business offerings,
+								customer expectations, and security risks. CXO’s make better informed decisions to experience continuous
+								growth of their
+								businesses.
+							</p>
 							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
@@ -211,13 +275,16 @@
 						<div class="section-title">
 							<h2>Who we are.</h2>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,
+						<p>Torinit exists to serve mid-market companies on their path to success. We’re more than consultants —
+							we’re full partners
+							in your journey to solving critical business problems and charting desirable futures. We pride ourselves
+							in becoming
+							incredibly attached to your projects, taking time to deeply understand your challenges and building
+							empathy with your
+							consumers. We don’t believe in blanket solutions, but work relentlessly to deliver customized services
+							that drive
+							transformational growth.
+
 						</p>
 						<a href="about" class="btn-learn-more">LEARN MORE</a>
 					</div>
@@ -228,24 +295,30 @@
 		<!-- ======= Goal Section ======= -->
 		<section id="goal" class="goal">
 			<div class="container">
-				<div class="section-title">
-					<h2>Enterprise Goals.</h2>
+				<div class="row content">
+					<div class="section-title">
+						<h2>What is your goal today?
+						</h2>
+					</div>
+					<p>See how our services can help your vision come to life
+					</p>
 				</div>
 				<div class="row">
 					<div class="columnbox3">
 						<div class="hoverbox">
 							<div class="content-overlay"></div>
 							<div class="content-title">
-								<h3>Optimize<br> Operations</h3>
+								<h3>Transform your enterprise</h3>
 								<a href="goals/accelerate-revenues" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
 							<div class="content-details fadeIn-bottom">
-								<h3 class="content-title">Optimize Operations
+								<h3 class="content-title">Transform your enterprise
 								</h3>
-								<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting
-									industry.
+								<p class="content-text">Gain competitive advantage and improve your performance by building a
+									future-facing culture.
+
 								</p>
 							</div>
 						</div>
@@ -254,23 +327,18 @@
 						<div class="hoverbox">
 							<div class="content-overlay"></div>
 							<div class="content-title">
-								<h3>Accelerate<br>
-									Revenues
+								<h3>Improve digital experiences
 								</h3>
 								<a href="goals/accelerate-revenues" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
 							<div class="content-details fadeIn-bottom">
-								<h3 class="content-title">Accelerate
-									Revenues
+								<h3 class="content-title">Improve digital experiences
 								</h3>
-								<p class="content-text">Enterprises leave repeat sales on the table with existing
-									and
-									past clients by
-									not
-									investing in loyalty programs and
-									re-targeting initiatives even though.
+								<p class="content-text">Create exceptional experiences that delight your users and streamline
+									operations, so that you can focus on what matters.
+
 								</p>
 							</div>
 						</div>
@@ -279,16 +347,17 @@
 						<div class="hoverbox">
 							<div class="content-overlay"></div>
 							<div class="content-title">
-								<h3>Harness the power of data and analytics</h3>
+								<h3>Accelerate sales</h3>
 								<a href="goals/accelerate-revenues" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
 							<div class="content-details fadeIn-bottom">
-								<h3 class="content-title">Harness the power of data and analytics
+								<h3 class="content-title">Accelerate sales
 								</h3>
-								<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting
-									industry.
+								<p class="content-text">Nurture lasting relationships and cultivate engagement by refining end-to-end
+									customer journeys.
+
 								</p>
 							</div>
 						</div>
@@ -297,19 +366,19 @@
 						<div class="hoverbox">
 							<div class="content-overlay"></div>
 							<div class="content-title">
-								<h3>Modernize core
-									technologies
+								<h3>Optimize operations
+
 								</h3>
 								<a href="goals/accelerate-revenues" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
 							<div class="content-details fadeIn-bottom">
-								<h3 class="content-title">Modernize core
-									technologies
+								<h3 class="content-title">Optimize operations
+
 								</h3>
-								<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting
-									industry.
+								<p class="content-text">Unlock efficiency and increase performance by reimagining your operational model
+									with human-centricity at the core.
 								</p>
 							</div>
 						</div>
@@ -318,21 +387,21 @@
 						<div class="hoverbox">
 							<div class="content-overlay"></div>
 							<div class="content-title">
-								<h3>Create
-									stunning digital
-									experiences
+								<h3>Build better products
+
 								</h3>
 								<a href="goals/accelerate-revenues" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
 							<div class="content-details fadeIn-bottom">
-								<h3 class="content-title">Create
-									stunning digital
-									experiences
+								<h3 class="content-title">Build better products
+
 								</h3>
-								<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting
-									industry.
+								<p class="content-text">Uncover new sources of value and boost product development by developing
+									consistent, highly effective and inspirational
+									experiences enabled by state-of-the-art design systems.
+
 								</p>
 							</div>
 						</div>
@@ -341,19 +410,17 @@
 						<div class="hoverbox">
 							<div class="content-overlay"></div>
 							<div class="content-title">
-								<h3>Empower<br>
-									customer <br>success
+								<h3>Build data intelligence
 								</h3>
 								<a href="goals/accelerate-revenues" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
 							<div class="content-details fadeIn-bottom">
-								<h3 class="content-title">Empower
-									customer success
+								<h3 class="content-title">Build data intelligence
 								</h3>
-								<p class="content-text">Lorem Ipsum is simply dummy text of the printing and typesetting
-									industry.
+								<p class="content-text">Create a data-driven culture that builds a competitive edge and unlocks true
+									performance.
 								</p>
 							</div>
 						</div>
@@ -444,7 +511,7 @@
 				<div class="col-md-12 col-lg-6">
 					<img src="assets/img/logo.svg" class="footer-logo">
 					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					<div class="copyright d-none d-sm-block">
+					<div class="copyright d-none d-lg-block">
 						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
@@ -452,6 +519,7 @@
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
+								<li><a href="index">Home</a></li>
 								<li><a href="about">About</a></li>
 								<li><a href="#">Solutions</a></li>
 								<li><a href="#">Services</a></li>
@@ -462,7 +530,7 @@
 						<div class="socialmedia">
 							<img src="assets/img/icon/linkedin.svg"> Find us on LinkedIn
 						</div>
-						<div class="copyright d-block d-sm-none">
+						<div class="copyright d-block d-lg-none">
 							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
