--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
 					</div>
 				</div>
 				<div class="row masonry-layout">
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Strategy & Insights</h3>
 							<p>Enterprises leave repeat sales on the table with existing and past clients by not
@@ -208,7 +208,7 @@
 								re-targeting initiatives even though.</p>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Product Management</h3>
 							<p>Enterprises leave repeat sales on the table with existing and past clients by not
@@ -217,7 +217,7 @@
 								re-targeting initiatives even though.</p>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Digital Product Design</h3>
 							<p>Enterprises leave repeat sales on the table with existing and past clients by not
@@ -226,7 +226,7 @@
 								re-targeting initiatives even though.</p>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Engineering & QA</h3>
 							<p>Enterprises leave repeat sales on the table with existing and past clients by not
@@ -235,7 +235,7 @@
 								re-targeting initiatives even though.</p>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Product Marketing</h3>
 							<p>Enterprises leave repeat sales on the table with existing and past clients by not
@@ -244,7 +244,7 @@
 								re-targeting initiatives even though.</p>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Delivery & DevOps</h3>
 							<p>Enterprises leave repeat sales on the table with existing and past clients by not
@@ -331,7 +331,7 @@
 				<div class="col-md-12 col-lg-6">
 					<img src="assets/img/logo.svg" class="footer-logo">
 					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					<div class="copyright d-none d-sm-block">
+					<div class="copyright d-none d-lg-block">
 						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
@@ -349,7 +349,7 @@
 						<div class="socialmedia">
 							<img src="assets/img/icon/linkedin.svg"> Find us on LinkedIn
 						</div>
-						<div class="copyright d-block d-sm-none">
+						<div class="copyright d-block d-lg-none">
 							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
