--- a/services/digital-transformation.html
+++ b/services/digital-transformation.html
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="row masonry-layout">
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
               <h3>Discover</h3>
               <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
@@ -147,7 +147,7 @@
                 re-targeting initiatives even though.</p>
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-6 col-lg-8">
             <div class="contentbluebox">
               <h3>Analyze</h3>
               <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
@@ -155,7 +155,7 @@
                 re-targeting initiatives even though.</p>
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-6 col-lg-8">
             <div class="contentbluebox">
               <h3>Grow</h3>
               <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
@@ -164,7 +164,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
               <h3>Plan</h3>
               <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
@@ -172,7 +172,7 @@
                 re-targeting initiatives even though.</p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
               <h3>Adapt</h3>
               <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
@@ -180,7 +180,7 @@
                 re-targeting initiatives even though.</p>
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-6 col-lg-8">
             <div class="contentbluebox">
               <h3>Build</h3>
               <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
@@ -253,7 +253,7 @@
         <div class="col-md-12 col-lg-6">
           <img src="../assets/img/logo.svg" class="footer-logo">
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-          <div class="copyright d-none d-sm-block">
+          <div class="copyright d-none d-lg-block">
             <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
           </div>
         </div>
@@ -271,7 +271,7 @@
             <div class="socialmedia">
               <img src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn
             </div>
-            <div class="copyright d-block d-sm-none">
+            <div class="copyright d-block d-lg-none">
               <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
             </div>
           </div>
