services pages done

--- a/about.html
+++ b/about.html
@@ -29,8 +29,7 @@
 			<nav id="navbar" class="navbar">
 				<ul>
 					<li><a class="nav-link active" href="about">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
-								class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="goals/accelerate-revenues.html">Optimize Operations</a></li>
 							<li><a href="goals/accelerate-revenues.html">Accelerate
@@ -58,11 +57,10 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0">
 		<div class="banner-container container">
-			<p class="subtext">Gial sub-title if desired</p>
-			<h1>About Us</h1>
-			<p>Leading business transformation through High-Impact
-				digital solutions.
-			</p>
+			<p class="subtext">About Us</p>
+			<h1>Committed to continuous improvement
+			</h1>
+
 		</div>
 		</div>
 	</section>
