--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 					<li><a class="nav-link" href="about">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="goals/accelerate-revenues.html">Transform your enterprise
+							<li><a href="goals/accelerate-sales">Transform your enterprise
 								</a></li>
-							<li><a href="goals/accelerate-revenues.html">Improve digital experiences</a></li>
-							<li><a href="goals/accelerate-revenues.html">Accelerate sales
+							<li><a href="goals/accelerate-sales">Improve digital experiences</a></li>
+							<li><a href="goals/accelerate-sales">Accelerate sales
 								</a>
 							</li>
-							<li><a href="goals/accelerate-revenues.html">Optimize operations</a></li>
-							<li><a href="goals/accelerate-revenues.html">Build better products</a></li>
-							<li><a href="goals/accelerate-revenues.html">Build data intelligence</a></li>
+							<li><a href="goals/accelerate-sales">Optimize operations</a></li>
+							<li><a href="goals/accelerate-sales">Build better products</a></li>
+							<li><a href="goals/accelerate-sales">Build data intelligence</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -429,79 +429,7 @@
 			</div>
 		</section>
 		<!-- End Goal Section -->
-		<!-- ======= casestudy Section ======= -->
-		<section id="casestudy" class="casestudy">
-			<div class="container">
-				<div class="section-title">
-					<h2>Our Impact</h2>
-				</div>
-				<div class="row content">
-					<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="5000">
-						<div class="col-lg-7">
-							<div class="row">
-								<div class="col-12" style="overflow: hidden;">
-									<div class="carousel-item  active">
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-											tempor
-											incididunt ut labore
-											et dolore magna
-											aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor
-											morbi
-											non arcu risus quis
-											varius.
-										</p>
-										<a href="#" class="btn-learn-more">
-											Learn More
-										</a>
-									</div>
-									<div class="carousel-item">
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-											tempor
-											incididunt ut labore
-											et dolore magna
-											aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor
-											morbi
-											non arcu risus quis
-											varius.
-										</p>
-										<a href="#" class="btn-learn-more">
-											Learn More
-										</a>
-									</div>
-									<div class="carousel-item ">
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-											tempor
-											incididunt ut labore
-											et dolore magna
-											aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor
-											morbi
-											non arcu risus quis
-											varius.
-										</p>
-										<a href="#" class="btn-learn-more">
-											Learn More
-										</a>
-									</div>
-								</div>
-							</div>
-							<div class="carousel-indicators">
-								<button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="0" class="active"></button>
-								<button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="1"></button>
-								<button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="2"></button>
-							</div>
-						</div>
 
-					</div>
-					<div class="col-lg-5">
-						<img src="assets/img/our-impact.png" class="img-fluid casestudyimg">
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End casestudy Section -->
 	</main>
 	<!-- End #main -->
 	<!-- ======= Footer ======= -->
