--- a/services/digital-transformation.html
+++ b/services/digital-transformation.html
@@ -20,35 +20,44 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-block align-items-center  header-transparent ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <div class="logo d-none d-sm-block">
-        <h1><a href="../index"><img src="../assets/img/logo.svg"></a></h1>
+      <div class="logo d-none d-md-block">
+        <h1><a href="../index.html"><img src="../assets/img/logo.svg"></a></h1>
       </div>
-      <div class="logo d-block d-sm-none">
-        <h1><a href="../index"><img src="../assets/img/mobile-logo.svg"></a></h1>
+      <div class="logo d-block d-md-none">
+        <h1><a href="../index.html"><img src="../assets/img/mobile-logo.svg"></a></h1>
       </div>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link" href="../about">ABOUT</a></li>
-          <li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span> <i
-                class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link" href="../index.html">HOME</a></li>
+          <li><a class="nav-link" href="../about.html">ABOUT</a></li>
+          <li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="../goals/accelerate-revenues.html">Optimize Operations</a></li>
-              <li><a href="../goals/accelerate-revenues.html">Accelerate
-                  Revenues</a></li>
-              <li><a href="../goals/accelerate-revenues.html">Harness the power of data and analytics</a>
+              <li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
+                </a></li>
+              <li><a href="../goals/improve-digital-experiences.html">Improve digital experiences</a></li>
+              <li><a href="../goals/accelerate-sales.html">Accelerate sales
+                </a>
               </li>
-              <li><a href="../goals/accelerate-revenues.html">Modernize core
-                  technologies</a></li>
-              <li><a href="../goals/accelerate-revenues.html">Create
-                  stunning digital
-                  experiences</a></li>
-              <li><a href="../goals/accelerate-revenues.html">Empower
-                  customer success</a></li>
+              <li><a href="../goals/optimize-operations.html">Optimize operations</a></li>
+              <li><a href="../goals/build-better-products.html">Build better products</a></li>
+              <li><a href="../goals/build-data-intelligence.html">Build data intelligence</a></li>
             </ul>
           </li>
-          <li><a class="nav-link active" href="#">Services</a></li>
-          <li><a class="nav-link" href="../career">CAREERS</a></li>
-          <li><a class="nav-link contactus" href="../contact">Contact</a></li>
+          <li class="dropdown">
+            <a class="nav-link active" href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="../services/digital-transformation.html">Digital Transformation
+                </a></li>
+              <li><a href="../services/product-development.html">Product Development</a></li>
+              <li><a href="../services/experience-design.html">Experience design</a>
+              </li>
+              <li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
+              <li><a href="../services/cx-audits.html">CX Audits</a></li>
+              <li><a href="../services/technical-audits.html">Technical Audits</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link" href="../career.html">CAREERS</a></li>
+          <li><a class="nav-link contactus" href="../contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -57,12 +66,14 @@
   <!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-    style="background: url(../assets/img/service-bg.png);">
-    <div class="banner-container container">
-      <p class="subtext">Services</p>
-      <h1>Digital Transformation</h1>
-      <p>Leading business transformation through High-Impact
-        digital solutions.
+    style="background: url(../assets/img/services/banner/services_digital_img.jpg);">
+    <div class="banner-container container" style="justify-content: flex-end;padding-bottom: 30px;">
+      <p class="subtext">Digital transformation
+      </p>
+      <h1>Modernize Business Process
+      </h1>
+      <p>Accelerate your path to industry leadership by harnessing the power of advanced technologies.
+
       </p>
     </div>
     </div>
@@ -74,16 +85,18 @@
         <div class="row content">
           <div class="col-xl-12">
             <div class="section-title">
-              <h2>Overview</h2>
+              <h2>Becoming a digital-first organisation
+              </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-              ut labore et
-              dolore magna
-              aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-              risus quis
-              varius. Lorem
-              ipsum dolor sit amet,
+              From e-commerce to online workforces and cybersecurity, enterprises must quickly adapt to digital
+              challenges. We help
+              you build critical capabilities that prepare you for the future while solving key business problems,
+              today. Our
+              end-to-end services allow you to modernize core technology, optimize workflows, automate operations and
+              scale the value
+              of data to deliver business outcomes.
+
             </p>
           </div>
         </div>
@@ -103,20 +116,22 @@
         <div class="row">
           <div class="col-md-4">
             <div class="contentbox">
-              <h3>86%</h3>
-              <p>Increased investments from a digital transformation</p>
+              <h3>2.1x</h3>
+              <p>Worker Productivity with AI-assisted processes</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contentbox">
-              <h3>86%</h3>
-              <p>Increased investments from a digital transformation</p>
+              <h3>3x</h3>
+              <p>Repeat purchases with big-data driven customer communications</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contentbox">
-              <h3>86%</h3>
-              <p>Increased investments from a digital transformation</p>
+              <h3>32%</h3>
+              <p>Average increase in EBITDA margin within 3 years of business process improvement via digital
+                transformation
+              </p>
             </div>
           </div>
         </div>
@@ -127,65 +142,66 @@
     <section class="approach">
       <div class="container container-xs">
         <div class="section-title">
-          <h2>Torinit’s approach to digital transformation</h2>
+          <h2>Our approach
+          </h2>
         </div>
         <div class="row content">
           <div class="col-md-12">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna
-              aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-              varius. Lorem
-              ipsum dolor sit amet,</p>
+            <p>At Torinit, we believe there is no standard pathway to digital transformation. That’s why we use a
+              holistic approach, looking at all aspects of your business to
+              uncover opportunities for transformation, and build a customized roadmap that helps you meet your goals.
+              Our experts
+              work with you at every step to integrate organization-wide processes and achieve modernization at scale,
+              work with you at every step to integrate organization-wide processes and achieve modernization,</p>
           </div>
         </div>
         <div class="row masonry-layout">
           <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
               <h3>Discover</h3>
-              <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
-                programs and
-                re-targeting initiatives even though.</p>
+              <p>Understand current operational and governance workflows of each business unit, uncover high impact
+                areas for improvement
+                or innovation.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-8">
             <div class="contentbluebox">
               <h3>Analyze</h3>
-              <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
-                programs and
-                re-targeting initiatives even though.</p>
+              <p>Evaluate business impact using market and consumer insights for each identified workflow improvement
+                with a short,
+                medium and long term view.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-8">
             <div class="contentbluebox">
-              <h3>Grow</h3>
-              <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
-                programs and
-                re-targeting initiatives even though.</p>
+              <h3>Define success</h3>
+              <p>Set your transformation goals with desired financial and qualitative impact of each identified
+                improvement, and conduct
+                benefit analysis to ensure that
+              </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
               <h3>Plan</h3>
-              <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
-                programs and
-                re-targeting initiatives even though.</p>
+              <p>Create a roadmap that identifies all worthy initiatives with clearly defined success metrics and
+                projected business
+                impact.
+              </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
-              <h3>Adapt</h3>
-              <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
-                programs and
-                re-targeting initiatives even though.</p>
+              <h3>Build</h3>
+              <p>Develop and implement initiatives on the roadmap</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-8">
             <div class="contentbluebox">
-              <h3>Build</h3>
-              <p>Enterprises leave repeat sales on the table with existing and past clients by not investing in loyalty
-                programs and
-                re-targeting initiatives even though.</p>
+              <h3>Measure</h3>
+              <p>impact for immediate and continuous improvement
+              </p>
             </div>
           </div>
         </div>
@@ -235,7 +251,8 @@
       <div class="container container-xs">
         <div class="row content">
           <div class="col-md-8">
-            <h3>Connect with us to learn more</h3>
+            <h3>Let’s work together
+            </h3>
           </div>
           <div class="col-md-4 align-self-center">
             <a href="../contact" class="btn-learn-more">Contact Us</a>
@@ -252,7 +269,7 @@
       <div class="row">
         <div class="col-md-12 col-lg-6">
           <img src="../assets/img/logo.svg" class="footer-logo">
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p class="text">Digital Business Transformation</p>
           <div class="copyright d-none d-lg-block">
             <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
           </div>
@@ -261,15 +278,17 @@
           <div class="rightsidecontent">
             <div class="footermenu">
               <ul>
+                <li><a href="../index">Home</a></li>
                 <li><a href="../about">About</a></li>
-                <li><a href="#">Solutions</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
+                <li><a href="../services/digital-transformation.html">Services</a></li>
                 <li><a href="../career">Careers</a></li>
                 <li><a href="../contact">Contact</a></li>
               </ul>
             </div>
             <div class="socialmedia">
-              <img src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn
+              <a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+                  src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
             </div>
             <div class="copyright d-block d-lg-none">
               <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
