--- a/index.html
+++ b/index.html
@@ -21,43 +21,43 @@
 	<header id="header" class="d-block align-items-center  header-transparent ">
 		<div class="container-fluid d-flex align-items-center justify-content-between">
 			<div class="logo d-none d-md-block">
-				<h1><a href="index"><img src="assets/img/logo.svg"></a></h1>
+				<h1><a href="index.html"><img src="assets/img/logo.svg"></a></h1>
 			</div>
 			<div class="logo d-block d-md-none">
-				<h1><a href="index"><img src="assets/img/mobile-logo.svg"></a></h1>
+				<h1><a href="index.html"><img src="assets/img/mobile-logo.svg"></a></h1>
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="index">HOME</a></li>
-					<li><a class="nav-link" href="about">ABOUT</a></li>
+					<li><a class="nav-link" href="index.html">HOME</a></li>
+					<li><a class="nav-link" href="about.html">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="goals/accelerate-sales">Transform your enterprise
+							<li><a href="goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
-							<li><a href="goals/accelerate-sales">Improve digital experiences</a></li>
-							<li><a href="goals/accelerate-sales">Accelerate sales
+							<li><a href="goals/improve-digital-experiences.html">Improve digital experiences</a></li>
+							<li><a href="goals/accelerate-sales.html">Accelerate sales
 								</a>
 							</li>
-							<li><a href="goals/accelerate-sales">Optimize operations</a></li>
-							<li><a href="goals/accelerate-sales">Build better products</a></li>
-							<li><a href="goals/accelerate-sales">Build data intelligence</a></li>
+							<li><a href="goals/optimize-operations.html">Optimize operations</a></li>
+							<li><a href="goals/build-better-products.html">Build better products</a></li>
+							<li><a href="goals/build-data-intelligence.html">Build data intelligence</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
 						<a class="nav-link" href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="services/digital-transformation">Digital Transformation
+							<li><a href="services/digital-transformation.html">Digital Transformation
 								</a></li>
-							<li><a href="services/digital-transformation">Product Development</a></li>
-							<li><a href="services/digital-transformation">Experience design</a>
+							<li><a href="services/product-development.html">Product Development</a></li>
+							<li><a href="services/experience-design.html">Experience design</a>
 							</li>
-							<li><a href="services/digital-transformation">Engineering Pods</a></li>
-							<li><a href="services/digital-transformation">CX Audits</a></li>
-							<li><a href="services/digital-transformation">Technical Audits</a></li>
+							<li><a href="services/engineering-pods.html">Engineering Pods</a></li>
+							<li><a href="services/cx-audits.html">CX Audits</a></li>
+							<li><a href="services/technical-audits.html">Technical Audits</a></li>
 						</ul>
 					</li>
-					<li><a class="nav-link" href="career">CAREERS</a></li>
-					<li><a class="nav-link contactus" href="contact">Contact</a></li>
+					<li><a class="nav-link" href="career.html">CAREERS</a></li>
+					<li><a class="nav-link contactus" href="contact.html">Contact</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
 			</nav>
@@ -136,7 +136,7 @@
 					<div class="bluebox">
 						<div class="bluebox d-block d-md-none">
 							<div class="imagecontent">
-								<img src="assets/img/services/digital--tranformation.png">
+								<img src="assets/img/home/services/digital-tranformation.png">
 							</div>
 						</div>
 						<div class="content">
@@ -147,13 +147,13 @@
 								state of the
 								art digital technologies.
 							</p>
-							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
+							<a href="services/digital-transformation.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
 						<div class="imagecontent">
-							<img src="assets/img/services/digital--tranformation.png">
+							<img src="assets/img/home/services/digital-tranformation.png">
 						</div>
 					</div>
 
@@ -161,7 +161,7 @@
 					<!--service-2-->
 					<div class="bluebox">
 						<div class="imagecontent">
-							<img src="assets/img/services/product-development.png">
+							<img src="assets/img/home/services/product-development.png">
 						</div>
 					</div>
 					<div class="bluebox">
@@ -173,7 +173,7 @@
 								digital product
 								strategy, development and distribution.
 							</p>
-							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
+							<a href="services/product-development.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
@@ -182,7 +182,7 @@
 					<div class="bluebox">
 						<div class="bluebox d-block d-md-none">
 							<div class="imagecontent">
-								<img src="assets/img/services/experience-design.png">
+								<img src="assets/img/home/services/experience-design.png">
 							</div>
 						</div>
 						<div class="content">
@@ -193,20 +193,20 @@
 								realize the
 								true potential of their value chain.
 							</p>
-							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
+							<a href="services/experience-design.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
 						<div class="imagecontent">
-							<img src="assets/img/services/experience-design.png">
+							<img src="assets/img/home/services/experience-design.png">
 						</div>
 					</div>
 					<!--end-->
 					<!--service-4-->
 					<div class="bluebox">
 						<div class="imagecontent">
-							<img src="assets/img/services/engineering-pod.png">
+							<img src="assets/img/home/services/engineering-pods.png">
 						</div>
 					</div>
 					<div class="bluebox">
@@ -216,7 +216,7 @@
 								Our engineering
 								pods act as a dedicated extended engineering team to your internal development efforts.
 							</p>
-							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
+							<a href="services/engineering-pods.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
@@ -224,7 +224,7 @@
 					<div class="bluebox">
 						<div class="bluebox d-block d-md-none">
 							<div class="imagecontent">
-								<img src="assets/img/services/ux-audit.png">
+								<img src="assets/img/home/services/cx-audits.png">
 							</div>
 						</div>
 						<div class="content">
@@ -235,19 +235,19 @@
 								quality of
 								existing experiences with surgical precision.
 							</p>
-							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
+							<a href="services/cx-audits.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
 					<div class="bluebox d-none d-md-block">
 						<div class="imagecontent">
-							<img src="assets/img/services/ux-audit.png">
+							<img src="assets/img/home/services/cx-audits.png">
 						</div>
 					</div>
 					<!--end-->
 					<div class="bluebox">
 						<div class="imagecontent">
-							<img src="assets/img/services/technical-audit.png">
+							<img src="assets/img/home/services/technical-audits.png">
 						</div>
 					</div>
 					<div class="bluebox">
@@ -259,7 +259,7 @@
 								growth of their
 								businesses.
 							</p>
-							<a href="services/digital-transformation" class="btn-learn-more stretched-link">
+							<a href="services/technical-audits.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
@@ -309,7 +309,7 @@
 							<div class="content-overlay"></div>
 							<div class="content-title">
 								<h3>Transform your enterprise</h3>
-								<a href="goals/accelerate-revenues" class="stretched-link">
+								<a href="goals/transform-your-enterprise.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
@@ -329,7 +329,7 @@
 							<div class="content-title">
 								<h3>Improve digital experiences
 								</h3>
-								<a href="goals/accelerate-revenues" class="stretched-link">
+								<a href="goals/improve-digital-experiences.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
@@ -348,7 +348,7 @@
 							<div class="content-overlay"></div>
 							<div class="content-title">
 								<h3>Accelerate sales</h3>
-								<a href="goals/accelerate-revenues" class="stretched-link">
+								<a href="goals/accelerate-sales.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
@@ -369,7 +369,7 @@
 								<h3>Optimize operations
 
 								</h3>
-								<a href="goals/accelerate-revenues" class="stretched-link">
+								<a href="goals/optimize-operations.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
@@ -390,7 +390,7 @@
 								<h3>Build better products
 
 								</h3>
-								<a href="goals/accelerate-revenues" class="stretched-link">
+								<a href="goals/build-better-products.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
@@ -412,7 +412,7 @@
 							<div class="content-title">
 								<h3>Build data intelligence
 								</h3>
-								<a href="goals/accelerate-revenues" class="stretched-link">
+								<a href="goals/build-data-intelligence.html" class="stretched-link">
 									<img src="assets/img/icon/left-arrow-blue.svg">
 								</a>
 							</div>
@@ -438,7 +438,7 @@
 			<div class="row">
 				<div class="col-md-12 col-lg-6">
 					<img src="assets/img/logo.svg" class="footer-logo">
-					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
 						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
@@ -449,14 +449,15 @@
 							<ul>
 								<li><a href="index">Home</a></li>
 								<li><a href="about">About</a></li>
-								<li><a href="#">Solutions</a></li>
-								<li><a href="#">Services</a></li>
+								<li><a href="goals/transform-your-enterprise.html">Solutions</a></li>
+								<li><a href="services/digital-transformation.html">Services</a></li>
 								<li><a href="career">Careers</a></li>
 								<li><a href="contact">Contact</a></li>
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<img src="assets/img/icon/linkedin.svg"> Find us on LinkedIn
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
 							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
