--- a/services/engineering-pods.html
+++ b/services/engineering-pods.html
@@ -20,35 +20,45 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-block align-items-center  header-transparent ">
         <div class="container-fluid d-flex align-items-center justify-content-between">
-            <div class="logo d-none d-sm-block">
-                <h1><a href="../index"><img src="../assets/img/logo.svg"></a></h1>
+            <div class="logo d-none d-md-block">
+                <h1><a href="../index.html"><img src="../assets/img/logo.svg"></a></h1>
             </div>
-            <div class="logo d-block d-sm-none">
-                <h1><a href="../index"><img src="../assets/img/mobile-logo.svg"></a></h1>
+            <div class="logo d-block d-md-none">
+                <h1><a href="../index.html"><img src="../assets/img/mobile-logo.svg"></a></h1>
             </div>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link" href="../about">ABOUT</a></li>
-                    <li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span> <i
+                    <li><a class="nav-link" href="../index.html">HOME</a></li>
+                    <li><a class="nav-link" href="../about.html">ABOUT</a></li>
+                    <li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
                                 class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="../goals/accelerate-revenues.html">Optimize Operations</a></li>
-                            <li><a href="../goals/accelerate-revenues.html">Accelerate
-                                    Revenues</a></li>
-                            <li><a href="../goals/accelerate-revenues.html">Harness the power of data and analytics</a>
+                            <li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
+                                </a></li>
+                            <li><a href="../goals/improve-digital-experiences.html">Improve digital experiences</a></li>
+                            <li><a href="../goals/accelerate-sales.html">Accelerate sales
+                                </a>
                             </li>
-                            <li><a href="../goals/accelerate-revenues.html">Modernize core
-                                    technologies</a></li>
-                            <li><a href="../goals/accelerate-revenues.html">Create
-                                    stunning digital
-                                    experiences</a></li>
-                            <li><a href="../goals/accelerate-revenues.html">Empower
-                                    customer success</a></li>
+                            <li><a href="../goals/optimize-operations.html">Optimize operations</a></li>
+                            <li><a href="../goals/build-better-products.html">Build better products</a></li>
+                            <li><a href="../goals/build-data-intelligence.html">Build data intelligence</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link active" href="#">Services</a></li>
-                    <li><a class="nav-link" href="../career">CAREERS</a></li>
-                    <li><a class="nav-link contactus" href="../contact">Contact</a></li>
+                    <li class="dropdown">
+                        <a class="nav-link active" href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
+                        <ul>
+                            <li><a href="../services/digital-transformation.html">Digital Transformation
+                                </a></li>
+                            <li><a href="../services/product-development.html">Product Development</a></li>
+                            <li><a href="../services/experience-design.html">Experience design</a>
+                            </li>
+                            <li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
+                            <li><a href="../services/cx-audits.html">CX Audits</a></li>
+                            <li><a href="../services/technical-audits.html">Technical Audits</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="nav-link" href="../career.html">CAREERS</a></li>
+                    <li><a class="nav-link contactus" href="../contact.html">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -57,11 +67,11 @@
     <!-- End Header -->
     <!-- ======= Hero Section ======= -->
     <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
-        style="background: url(../assets/img/service-bg.png);">
-        <div class="banner-container container">
+        style="background: url(../assets/img/services/banner/services_engineering_pods_img.jpg);">
+        <div class="banner-container container" style="justify-content: flex-start;padding-top: 160px;">
             <p class="subtext">Services</p>
-            <h1>Digital Transformation</h1>
-            <p>Leading business transformation through High-Impact
+            <h1>Engineering Pods</h1>
+            <p>Leading business transformation through <br>High-Impact
                 digital solutions.
             </p>
         </div>
@@ -260,7 +270,7 @@
             <div class="row">
                 <div class="col-md-12 col-lg-6">
                     <img src="../assets/img/logo.svg" class="footer-logo">
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <p class="text">Digital Business Transformation</p>
                     <div class="copyright d-none d-lg-block">
                         <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
                     </div>
@@ -269,15 +279,17 @@
                     <div class="rightsidecontent">
                         <div class="footermenu">
                             <ul>
+                                <li><a href="../index">Home</a></li>
                                 <li><a href="../about">About</a></li>
-                                <li><a href="#">Solutions</a></li>
-                                <li><a href="#">Services</a></li>
+                                <li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
+                                <li><a href="../services/digital-transformation.html">Services</a></li>
                                 <li><a href="../career">Careers</a></li>
                                 <li><a href="../contact">Contact</a></li>
                             </ul>
                         </div>
                         <div class="socialmedia">
-                            <img src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn
+                            <a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+                                    src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
                         </div>
                         <div class="copyright d-block d-lg-none">
                             <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
